--- a/03_spacy_nlp_made_easy.ipynb
+++ b/03_spacy_nlp_made_easy.ipynb
@@ -95,15 +95,34 @@
     "from spacy.pipeline import Sentencizer\n",
     "\n",
     "# https://github.com/explosion/spaCy/issues/3569\n",
-    "# By default, nlp.add_pipe will add the component last in the pipeline (after the parser).  To use custom sentence boundaries, \n",
-    "# you have to apply them before the parser – nlp.add_pipe(sentencizer, before=\"parser\"). The parser will then take your \n",
-    "# custom boundaries into account as well and only assign dependencies that are consistent with the sentences.  This can \n",
-    "# lead to an improvement in parsing accuracy\n",
+    "# By default, nlp.add_pipe adds the component last in the pipeline (after the parser).  To use custom sentence boundaries, \n",
+    "# apply them before the parser.  The parser will then take your custom boundaries into account and only assign dependencies\n",
+    "# that are consistent with the sentences.  This can lead to an improvement in parsing accuracy\n",
     "sentencizer = Sentencizer()\n",
     "nlp_parser.add_pipe(sentencizer, before = 'parser')\n",
     "\n",
     "parsed_document = nlp_parser(document)\n",
     "nlp_parser.pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "generator"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(parsed_document.sents)"
    ]
   },
   {
@@ -2005,7 +2024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2026,8 +2045,8 @@
     "        return {}\n",
     "\n",
     "# Basic utility function to clean the text \n",
-    "def clean_text(text):     \n",
-    "    return text.strip().lower()"
+    "def clean_text(text):\n",
+    "    return text.strip().lower()\n"
    ]
   },
   {
@@ -2041,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2064,14 +2083,14 @@
     "    mytokens = [word for word in mytokens if word not in stopwords and word not in punctuations]\n",
     "    return mytokens\n",
     "\n",
-    "# Create vectorizer object to generate feature vectors, we will use custom spacy’s tokenizer\n",
+    "# Create vectorizer object to generate feature vectors, using custom spaCy tokenizer\n",
     "vectorizer = CountVectorizer(tokenizer = spacy_tokenizer, ngram_range = (1,1))\n",
     "classifier = LinearSVC()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -2080,7 +2099,7 @@
        "['walk', 'walker', 'wall', 'sit', 'run', 'runner']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2088,6 +2107,113 @@
    "source": [
     "ex1 = 'He was walking with the walker in the Wall; he may had sat and run with the runner, too'\n",
     "spacy_tokenizer(ex1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['h',\n",
+       " 'e',\n",
+       " '',\n",
+       " 'w',\n",
+       " 'a',\n",
+       " 's',\n",
+       " '',\n",
+       " 'w',\n",
+       " 'a',\n",
+       " 'l',\n",
+       " 'k',\n",
+       " 'i',\n",
+       " 'n',\n",
+       " 'g',\n",
+       " '',\n",
+       " 'w',\n",
+       " 'i',\n",
+       " 't',\n",
+       " 'h',\n",
+       " '',\n",
+       " 't',\n",
+       " 'h',\n",
+       " 'e',\n",
+       " '',\n",
+       " 'w',\n",
+       " 'a',\n",
+       " 'l',\n",
+       " 'k',\n",
+       " 'e',\n",
+       " 'r',\n",
+       " '',\n",
+       " 'i',\n",
+       " 'n',\n",
+       " '',\n",
+       " 't',\n",
+       " 'h',\n",
+       " 'e',\n",
+       " '',\n",
+       " 'w',\n",
+       " 'a',\n",
+       " 'l',\n",
+       " 'l',\n",
+       " ';',\n",
+       " '',\n",
+       " 'h',\n",
+       " 'e',\n",
+       " '',\n",
+       " 'm',\n",
+       " 'a',\n",
+       " 'y',\n",
+       " '',\n",
+       " 'h',\n",
+       " 'a',\n",
+       " 'd',\n",
+       " '',\n",
+       " 's',\n",
+       " 'a',\n",
+       " 't',\n",
+       " '',\n",
+       " 'a',\n",
+       " 'n',\n",
+       " 'd',\n",
+       " '',\n",
+       " 'r',\n",
+       " 'u',\n",
+       " 'n',\n",
+       " '',\n",
+       " 'w',\n",
+       " 'i',\n",
+       " 't',\n",
+       " 'h',\n",
+       " '',\n",
+       " 't',\n",
+       " 'h',\n",
+       " 'e',\n",
+       " '',\n",
+       " 'r',\n",
+       " 'u',\n",
+       " 'n',\n",
+       " 'n',\n",
+       " 'e',\n",
+       " 'r',\n",
+       " ',',\n",
+       " '',\n",
+       " 't',\n",
+       " 'o',\n",
+       " 'o']"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = predictors()\n",
+    "p.transform(ex1)"
    ]
   },
   {
