--- a/03_spacy_test.ipynb
+++ b/03_spacy_test.ipynb
@@ -1214,16 +1214,16 @@
     "# Create spacy tokenizer that accepts a sentence as input and processes the sentence into tokens (which can also be replaced \n",
     "# by word vectors), performing lemmatization, lowercasing, and removing stop words and punctuation \n",
     "def spacy_tokenizer(sentence):\n",
-    "    # Creating our token object, which is used to create documents with linguistic annotations.\n",
+    "    # Creating token object, which is used to create documents with linguistic annotations\n",
     "    mytokens = parser(sentence)\n",
     "\n",
-    "    # Lemmatizing each token and converting each token into lowercase\n",
+    "    # Lemmatizing each token and converting each into lowercase\n",
     "    mytokens = [ word.lemma_.lower().strip() if word.lemma_ != \"-PRON-\" else word.lower_ for word in mytokens ]\n",
     "\n",
     "    # Removing stop words and punctuation\n",
     "    mytokens = [ word for word in mytokens if word not in stop_words and word not in punctuations ]\n",
     "\n",
-    "    # return preprocessed list of tokens\n",
+    "    # Return preprocessed list of tokens\n",
     "    return mytokens"
    ]
   },
@@ -1337,7 +1337,23 @@
     "* The vectorizer uses countvector objects to create the bag of words matrix for our text\n",
     "* The classifier is an object that performs the logistic regression to classify the sentiments\n",
     "\n",
-    "Once this pipeline is built, we’ll fit the pipeline components using fit()."
+    "Once this pipeline is built, we’ll fit the pipeline components using fit().\n",
+    "\n",
+    "[How Pipelines Work](https://spacy.io/usage/processing-pipelines/#pipeline)\n",
+    "\n",
+    "### Built-in pipeline components\n",
+    "\n",
+    " |  STRING NAME |\tCOMPONENT | DESCRIPTION\n",
+    "|-----------|----------|----------|\n",
+    "| tagger | Tagger |\tAssign part-of-speech-tags |\n",
+    "| parser | DependencyParser | Assign dependency labels |\n",
+    "| ner | EntityRecognizer | Assign named entities |\n",
+    "| textcat | TextCategorizer | Assign text categories |\n",
+    "| entity_ruler | EntityRuler | Assign named entities based on pattern rules |\n",
+    "| sentencizer | Sentencizer\t | Add rule-based sentence segmentation without the dependency parse |\n",
+    "| merge_noun_chunks | merge_noun_chunks | Merge all noun chunks into a single token. Should be added after the tagger and parser |\n",
+    "| merge_entities | merge_entities | Merge all entities into a single token. Should be added after the entity recognizer |\n",
+    "| merge_subtokens | merge_subtokens | Merge subtokens predicted by the parser into single tokens. Should be added after the parser |"
    ]
   },
   {
@@ -1663,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1676,7 +1692,8 @@
       "that \n",
       "ends \n",
       "well \n",
-      ". \n"
+      ". \n",
+      "6\n"
      ]
     }
    ],
@@ -1684,7 +1701,11 @@
     "docs = nlp(u\"All is well that ends well.\")\n",
     "\n",
     "for word in docs:\n",
-    "    print(word.text, word.pos_)"
+    "    print(word.text, word.pos_)\n",
+    " \n",
+    "# Count the number of words in the sentence, excluding only punctuation marks\n",
+    "mytokens = [word for word in docs if not word.is_punct]\n",
+    "print(len(mytokens))"
    ]
   },
   {
@@ -1725,6 +1746,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Unsupervised Parameter Search Function\n",
+    "\n",
+    "* This function finds the parameters that produce# the highest Normalized Mutual Infomation score from our clusters. This score is a good baseline from which to compare clustering vs classification because it correlates with good clutering as well as higher accuracy scores.\n",
+    "* It prints the relevant statistics as well as a contingency matrix of the result and stores the results in a DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models import Word2Vec\n",
+    "from sklearn.decomposition import PCA\n",
+    "from matplotlib import pyplot\n",
+    "# define training data\n",
+    "sentences = [['this', 'is', 'the', 'first', 'sentence', 'for', 'word2vec'],\n",
+    "             ['this', 'is', 'the', 'second', 'sentence'],\n",
+    "             ['yet', 'another', 'sentence'],\n",
+    "             ['one', 'more', 'sentence'],\n",
+    "             ['and', 'the', 'final', 'sentence']]\n",
+    "# train model\n",
+    "model = Word2Vec(sentences, min_count=1)\n",
+    "# fit a 2d PCA model to the vectors\n",
+    "X = model[model.wv.vocab]\n",
+    "pca = PCA(n_components=2)\n",
+    "result = pca.fit_transform(X)\n",
+    "# create a scatter plot of the projection\n",
+    "pyplot.scatter(result[:, 0], result[:, 1])\n",
+    "words = list(model.wv.vocab)\n",
+    "for i, word in enumerate(words):\n",
+    "    pyplot.annotate(word, xy=(result[i, 0], result[i, 1]))\n",
+    "pyplot.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models import Word2Vec\n",
+    "from sklearn.decomposition import PCA\n",
+    "from matplotlib import pyplot\n",
+    "# define training data\n",
+    "sentences = [['this', 'is', 'the', 'first', 'sentence', 'for', 'word2vec'],\n",
+    "             ['this', 'is', 'the', 'second', 'sentence'],\n",
+    "             ['yet', 'another', 'sentence'],\n",
+    "             ['one', 'more', 'sentence'],\n",
+    "             ['and', 'the', 'final', 'sentence']]\n",
+    "# train model\n",
+    "model = Word2Vec(sentences, min_count=1)\n",
+    "model.wv.vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fit a 2d PCA model to the vectors\n",
+    "X = model[model.wv.vocab]\n",
+    "print(X.shape)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components=2)\n",
+    "result = pca.fit_transform(X)\n",
+    "print(result.shape)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a scatter plot of the projection\n",
+    "pyplot.scatter(result[:, 0], result[:, 1])\n",
+    "words = list(model.wv.vocab)\n",
+    "for i, word in enumerate(words):\n",
+    "    pyplot.annotate(word, xy=(result[i, 0], result[i, 1]))\n",
+    "pyplot.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(X[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['url'] = df['url'].str.replace('foodnewsfeed', 'fsrmagazine')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1754,6 +1897,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
