--- a/03_spacy_text_classifier.ipynb
+++ b/03_spacy_text_classifier.ipynb
@@ -734,7 +734,8 @@
    },
    "outputs": [],
    "source": [
-    "# Create spacy tokenizer that parses a sentence and generates tokens.  These can also be replaced by word vectors \n",
+    "# Create spacy tokenizer that accepts a sentence as input and processes the sentence into tokens, performing lemmatization, \n",
+    "# lowercasing, and removing stop words and punctuation \n",
     "def spacy_tokenizer(sentence):\n",
     "    mytokens = nlp_parser(sentence)\n",
     "    mytokens = [word.lemma_.lower().strip() if word.lemma_ != '-PRON-' else word.lower_ for word in mytokens]\n",
@@ -2547,7 +2548,7 @@
     "For tokenizer and vectorizer we build our own custom modules using spaCy:\n",
     "\n",
     "• The 'predictors' class is used as the first stage of the pipeline.  It is derived from the TransformerMixin package \n",
-    "  and performs the cleaning of data.<br>\n",
+    "  and performs the cleaning of data.  <span style=\"color:red\">**It is ommitted in [NLP Spacy prac - yelp reviews](https://www.kaggle.com/abhideshmukh1/nlp-spacy-prac-yelp-reviews/notebook), and does not really appear to be necessary**</span><br>\n",
     "• The second stage of the pipeline is to vectorize the cleaned data.  Tokenized words are lemmatized and filtered for \n",
     "  pronouns, stopwords and punctuations using spacy_tokenizer().  For that purpose, count vectorizeor and tfidfVectorizer \n",
     "  are subsequently employed to decide which is better.<br>\n",
@@ -2611,15 +2612,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create spacy tokenizer that accepts a sentence as input and processes the sentence into tokens (which can also be replaced \n",
-    "# by word vectors), performing lemmatization, lowercasing, and removing stop words and punctuation \n",
+    "# Create spacy tokenizer that accepts a sentence as input and processes the sentence into tokens, performing lemmatization, \n",
+    "# lowercasing, and removing stop words and punctuation \n",
     "def spacy_tokenizer(sentence):\n",
     "    mytokens = nlp_parser(sentence)\n",
     "    mytokens = [word.lemma_.lower().strip() if word.lemma_ != '-PRON-' else word.lower_ for word in mytokens]\n",
     "    mytokens = [word for word in mytokens if word not in stopwords and word not in punctuations]\n",
     "    return mytokens\n",
     "\n",
-    "# Create vectorizer object to generate feature vectors, we will use custom spacy’s tokenizer\n",
+    "# Create vectorizer object to generate feature vectors, using custom spaCy tokenizer\n",
     "vectorizer = CountVectorizer(tokenizer = spacy_tokenizer, ngram_range = (1,1))\n",
     "classifier = LinearSVC()"
    ]
